--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules/
+__pycache__/
 /dist/
 npm-debug.log*
 yarn-debug.log*
@@ -18,3 +19,4 @@ selenium-debug.log
 
 *.pyc
 *.sqlite3
+local_settings.py
